# m7-price-predictions-new

./: Dockerfile  Makefile  README.md  pyproject.toml
docs/: .dockerignore  .flake8  .gitignore  .gitlab-ci.yml  .gitlab-ci.yml.rename  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yaml  hp_plot.html  pyproject.toml
docs/etc/dashboards/: default.json
docs/etc/prometheus/: prometheus.yml
docs/gate_close/: QuantileNeuralNetwork.html  coordinate_plot.json.html  hp_plot.html
docs/src/m7_price_predictions/: m7_settings.py
docs/src/m7_price_predictions/eda/reports/: eda_03.html  eda_06.html  eda_07.html  eda_11.html  eda_12.html  eda_13.html
docs/src/m7_price_predictions/eda/results/: results_Jan_NN_3_test_.pickle  results_NewFeatures_NN_.pickle
docs/src/m7_price_predictions/fe/: README_fe.md  importance.py  transform.py
docs/src/m7_price_predictions/schemas/: schemas.py
docs/src/m7_price_predictions/tuning/docs/: best_params.json
docs/src/package/: example.py
docs/src/pulsar_tracing/: app.py  producer.py  prom.py  settings.py  tracing.py
docs/test/: test_example.py
docs/tests/: test_parse_efa.py
src/m7_price_predictions/: main.py
src/m7_price_predictions/eda/: README_eda.md  eda_report_generator.ipynb  playground-simulate.ipynb
src/m7_price_predictions/eda/reports/: eda_04.html  eda_05.html  eda_08.html  eda_09.html  eda_10.html
src/m7_price_predictions/eda/results/: results_Jan_NN_3_.pickle  results_Jan_NN_test_.pickle
src/m7_price_predictions/fe/: features.py  utils.py
src/m7_price_predictions/models/: __init__.py  quantile_neural_network.py
src/m7_price_predictions/tuning/: README_tuning.md  tuning.py
src/m7_price_predictions/utils/: alerting.py
tests/: test_features.py
