[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]

[tool.poetry]
authors = ["Andrea Piccione <andrea.piccione@arenko.group>"]
description = "Forecast M7 prices"
name = "M7 price predictor"
packages = [{include = "m7_price_predictions", from = "src"}]
readme = "README.md"
version = "0.1.0"


[tool.poetry.dependencies]
python = "3.11.7"
arenkodsml = {git = "ssh://git@gitlab.com/arenko-group/data-science/arenkods-ml.git", tag = "1.4.0", develop=true}
service-utils = { git = "ssh://git@gitlab.com/arenko-group/data-science/service-utils.git", rev = "develop", develop = true }

[tool.poetry.group.test.dependencies]
pytest = "^7.4.0"

[tool.poetry.group.dev.dependencies]
pre-commit = ">=3.3.3"
ruff = ">=0.1.11,<1"
mypy = "^1.4.1"

[tool.ruff]
select = ["E", "F", "I", "N", "W", "D207", "D208", "D300", "UP", "YTT", "ASYNC", "A", "DTZ", "G10", "G101", "G201", "G202", "INP001", "PIE", "T20", "SIM", "PTH", "PD", "PLE", "PLR", "PLW", "TRY", "NPY", "RUF"]
ignore = ["PD010", "PD901", "PLR2004", "UP017", "N803", "N806", "PLW2901", "PLR0913", "PLR0915", "INP001"]
line-length = 120
target-version = "py311"

[tool.ruff.extend-per-file-ignores]
"test/***" = ["INP001"]
"__init__.py" = ["E402"]

[tool.ruff.format]
indent-style = "space"
quote-style = "double"
line-ending = "auto"

[tool.mypy]
plugins = "pydantic.mypy"
check_untyped_defs = true
disallow_any_unimported  = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_decorators = false
disallow_untyped_defs = true
implicit_reexport = false
no_implicit_optional = false
python_version = "3.11"
strict_equality = true
show_error_codes = true
warn_redundant_casts = true
warn_return_any = true
warn_unused_ignores = true